Added application level error handling, updated swagger.json to include all apis and updated readme.md
